@@ -1632,7 +1632,7 @@ public class Block {
 		}
 	};
 	public static final int BRICKSTAIRS_ID = 0x6C;
-	public static final Block BRICKSTAIRS = new Block(BRICKSTAIRS_ID, "Brick Stairs", Texture.unknown) {
+	public static final Block BRICKSTAIRS = new Block(BRICKSTAIRS_ID, "Brick Stairs", Icon.stoneStairs, Texture.brick) {
 		{
 			isOpaque = false;
 			isSolid = false;
@@ -1644,7 +1644,7 @@ public class Block {
 		}
 	};
 	public static final int STONEBRICKSTAIRS_ID = 0x6D;
-	public static final Block STONEBRICKSTAIRS = new Block(STONEBRICKSTAIRS_ID, "Stone Brick Stairs", Icon.stoneBrickStairs) {
+	public static final Block STONEBRICKSTAIRS = new Block(STONEBRICKSTAIRS_ID, "Stone Brick Stairs", Icon.stoneBrickStairs, Texture.stoneBrick) {
 		{
 			isOpaque = false;
 			isSolid = false;
@@ -1704,7 +1704,7 @@ public class Block {
 		}
 	};
 	public static final int NETHERBRICKSTAIRS_ID = 0x72;
-	public static final Block NETHERBRICKSTAIRS = new Block(NETHERBRICKFENCE_ID, "Nether Brick Stairs", Texture.unknown) {
+	public static final Block NETHERBRICKSTAIRS = new Block(NETHERBRICKFENCE_ID, "Nether Brick Stairs", Icon.stoneStairs, Texture.netherBrick) {
 		{
 			isOpaque = false;
 			isSolid = false;
@@ -1869,7 +1869,7 @@ public class Block {
 		}
 	};
 	public static final int SANDSTONESTAIRS_ID = 0x80;
-	public static final Block SANDSTONESTAIRS = new Block(SANDSTONESTAIRS_ID, "Sandstone Stairs", Texture.sandstoneSide) {
+	public static final Block SANDSTONESTAIRS = new Block(SANDSTONESTAIRS_ID, "Sandstone Stairs", Icon.stoneStairs, Texture.sandstoneSide) {
 		{
 			isOpaque = false;
 			isSolid = false;
@@ -1942,7 +1942,7 @@ public class Block {
 		}
 	};
 	public static final int SPRUCEWOODSTAIRS_ID = 0x86;
-	public static final Block SPRUCEWOODSTAIRS = new Block(SPRUCEWOODSTAIRS_ID, "Spruce Wood Stairs", Texture.sprucePlanks) {
+	public static final Block SPRUCEWOODSTAIRS = new Block(SPRUCEWOODSTAIRS_ID, "Spruce Wood Stairs", Icon.woodenStairs, Texture.sprucePlanks) {
 		{
 			isOpaque = false;
 			isSolid = false;
@@ -1954,7 +1954,7 @@ public class Block {
 		}
 	};
 	public static final int BIRCHWOODSTAIRS_ID = 0x87;
-	public static final Block BIRCHWOODSTAIRS = new Block(BIRCHWOODSTAIRS_ID, "Birch Wood Stairs", Texture.birchPlanks) {
+	public static final Block BIRCHWOODSTAIRS = new Block(BIRCHWOODSTAIRS_ID, "Birch Wood Stairs", Icon.woodenStairs, Texture.birchPlanks) {
 		{
 			isOpaque = false;
 			isSolid = false;
@@ -1966,7 +1966,7 @@ public class Block {
 		}
 	};
 	public static final int JUNGLEWOODSTAIRS_ID = 0x88;
-	public static final Block JUNGLEWOODSTAIRS = new Block(JUNGLEWOODSTAIRS_ID, "Jungle Wood Stairs", Texture.jungleTreePlanks) {
+	public static final Block JUNGLEWOODSTAIRS = new Block(JUNGLEWOODSTAIRS_ID, "Jungle Wood Stairs", Icon.woodenStairs, Texture.jungleTreePlanks) {
 		{
 			isOpaque = false;
 			isSolid = false;
@@ -2158,11 +2158,16 @@ public class Block {
 			return QuartzModel.intersect(ray);
 		}
 	};
-	public static final Block UNKNOWN0x9C = new Block(0x9C, "Unknown Block 0x9C", Texture.unknown) {
+	public static final Block QUARTZSTAIRS = new Block(0x9C, "Quartz Stairs", Icon.stoneStairs, Texture.quartzSide) {
 		{
 			isOpaque = false;
 			isSolid = false;
-			isInvisible = true;
+			localIntersect = true;
+		}
+		@Override
+		public boolean intersect(Ray ray, Scene scene) {
+			return StairModel.intersect(ray, Texture.quartzSide,
+					Texture.quartzTop, Texture.quartzBottom);
 		}
 	};
 	public static final Block ACTIVATORRAIL = new Block(0x9D, "Activator Rail", Texture.unknown) {
@@ -2917,7 +2922,7 @@ public class Block {
 		HEAD, ANVIL, UNKNOWN0x92, UNKNOWN0x93,
 		UNKNOWN0x94, UNKNOWN0x95, UNKNOWN0x96, UNKNOWN0x97,
 		REDSTONEBLOCK, NETHERQUARTZORE, UNKNOWN0x9A, QUARTZ,
-		UNKNOWN0x9C, ACTIVATORRAIL, DROPPER, UNKNOWN0x9F,
+		QUARTZSTAIRS, ACTIVATORRAIL, DROPPER, UNKNOWN0x9F,
 		UNKNOWN0xA0, UNKNOWN0xA1, UNKNOWN0xA2, UNKNOWN0xA3,
 		UNKNOWN0xA4, UNKNOWN0xA5, UNKNOWN0xA6, UNKNOWN0xA7,
 		UNKNOWN0xA8, UNKNOWN0xA9, UNKNOWN0xAA, UNKNOWN0xAB,
