@@ -16,6 +16,7 @@
     * Added nether quartz ore block
     * Added quartz block
     * Added activator rail
+    * Added quartz stairs
     * Allow opening read-only region files
     * If sunlight is disabled the sun will not be rendered
     * It is now possible to disable mirroring the sky at the horizon
